all done 1st trying to pass logo color fixed

--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ body {
     font-weight: 300;
     font-size: 30px;
     line-height: 32px;
+    color: #626262;
     float: left;
     text-transform: uppercase;
     margin: 38px 15px 32px 15px;
